Fix: password change form takes available space on small screens

--- a/src/app/core/user/user-account/user-account.component.scss
+++ b/src/app/core/user/user-account/user-account.component.scss
@@ -23,3 +23,8 @@
   margin: sizes.$small;
   padding: sizes.$small;
 }
+
+.min-width-1-3 {
+  max-width: 600px;
+  min-width: 33.3%;
+}
